--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,9 @@ jobs:
       # Install the .NET SDK indicated in the global.json file
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
+      
+      - name: Install necessary workloads
+        run: dotnet workload restore
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
