--- a/XPACE.Google.ARCore/XPACE.Google.ARCore.csproj
+++ b/XPACE.Google.ARCore/XPACE.Google.ARCore.csproj
@@ -33,8 +33,8 @@
   It allows for conditional compilation, enabling the exclusion of Additions.cs during certain build processes,
   such as when generating binding code where Additions.cs might cause build issues due to missing dependencies.
   -->
-  <ItemGroup Condition="'$(NoAdditions)'!='true'">
-    <Compile Include="Additions/Additions.cs" />
+  <ItemGroup Condition="'$(NoAdditions)'=='true'">
+    <Compile Remove="Additions/Additions.cs" />
   </ItemGroup>
 
   <ItemGroup>
