build: set Readme file path

--- a/XPACE.Google.ARCore/XPACE.Google.ARCore.csproj
+++ b/XPACE.Google.ARCore/XPACE.Google.ARCore.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile>../README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
