ci: fix copy task

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,10 +57,10 @@ jobs:
 
       - name: Copy the native ARCore library to the project folder
         run: |
-          cp ${{ env.LocalMavenRepo }}/${{ env.LocalGroupIdPath }}/${{ env.ArCoreArtifactId }}/${{ env.ArCoreVersion }}/${{ env.ArCoreArtifactId }}-${{ env.ArCoreVersion }}.aar ./XPACE.Google.ARCore/arcore.aar
+          cp ${{ env.LocalMavenRepo }}/${{ env.LocalGroupIdPath }}/${{ env.ArCoreArtifactId }}/${{ env.ArCoreVersion }}/${{ env.ArCoreArtifactId }}-${{ env.ArCoreVersion }}.aar ./arcore.aar
       
       # Create the NuGet package in the folder from the environment variable NuGetDirectory
-      - run: dotnet build -v d --configuration Release && dotnet pack --configuration Release --no-build --output ${{ env.NuGetDirectory }}
+      - run: dotnet build --configuration Release && dotnet pack --configuration Release --no-build --output ${{ env.NuGetDirectory }}
       
       # Publish the NuGet package as an artifact, so they can be used in the following jobs
       - uses: actions/upload-artifact@v3
