--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,9 +91,9 @@ jobs:
       # https://www.nuget.org/packages/Meziantou.Framework.NuGetPackageValidation.Tool#readme-body-tab
       # If some rules are not applicable, you can disable them
       # using the --excluded-rules or --excluded-rule-ids option
-      - name: Validate package
-        run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
-        shell: pwsh
+#      - name: Validate package
+#        run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
+#        shell: pwsh
 
   publish:
     # Publish only when creating a GitHub Release
