--- a/XPACE.Google.ARCore.csproj
+++ b/XPACE.Google.ARCore.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0-android</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+    <Version>1.41.0-alpha</Version>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>DotNetAndroidARCoreBindings</RootNamespace>
