--- a/XPACE.Google.ARCore.csproj
+++ b/XPACE.Google.ARCore.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-android</TargetFramework>
-    <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
-    <Version>1.41.0-alpha</Version>
+    <SupportedOSPlatformVersion>24</SupportedOSPlatformVersion>
+    <Version>1.41.0</Version>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>XPACE.Google.ARCore</RootNamespace>
